Solved image in dist problem

--- a/src/userInterface/MriAnalyzer.module.css
+++ b/src/userInterface/MriAnalyzer.module.css
@@ -492,7 +492,7 @@ select:focus {
   top: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
-  background-image: url('./visGroup.png');
+  background-image: url('./mriAnalyzer.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
