--- a/src/userInterface/MriAnalyzer.module.css
+++ b/src/userInterface/MriAnalyzer.module.css
@@ -491,8 +491,8 @@ select:focus {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
-  background-image: url('./mriAnalyzer.jpg');
+  background-color: transparent;
+  background-image: url('./mriAnalyzer.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
