WIP Selection menue band

--- a/src/userInterface/MriAnalyzer.module.css
+++ b/src/userInterface/MriAnalyzer.module.css
@@ -12,8 +12,12 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .uiContainer {
@@ -29,6 +33,21 @@
   box-sizing: border-box;
   z-index: 1000;
 }
+
+.uiSelectionWidgetContainer {
+  display: flex;
+  align-items: stretch;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  padding: 2px;
+  border: 0px;
+  box-sizing: border-box;
+  z-index: 1000;
+}
+
 
 .uiGroup {
   background: rgba(128, 128, 128, 0.5);
@@ -79,104 +98,116 @@
 }
 
 [itk-vtk-tooltip] {
-    position: relative;
+  position: relative;
 }
+
 [itk-vtk-tooltip]::before {
-    content: attr(itk-vtk-tooltip-content);
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: calc(100% + 16px);
-    width: 400%;
-    padding: 4px 6px;
-    text-align: center;
-    text-transform: none;
-    font-size: 0.9em;
-    font-family: monospace;
-    border-radius: 3px;
-    background: rgba(0.9, 0.9, 0.9, 0.95);
-    color: white;
-    opacity: 0;
-    transform: translate(15px, -50%);
-    transition-property: all;
-    transition-duration: 0.3s;
-    transition-timing-function: ease-in-out;
-    transition-delay: 0.8s;
-    z-index: 1;
+  content: attr(itk-vtk-tooltip-content);
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: calc(100% + 16px);
+  width: 400%;
+  padding: 4px 6px;
+  text-align: center;
+  text-transform: none;
+  font-size: 0.9em;
+  font-family: monospace;
+  border-radius: 3px;
+  background: rgba(0.9, 0.9, 0.9, 0.95);
+  color: white;
+  opacity: 0;
+  transform: translate(15px, -50%);
+  transition-property: all;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0.8s;
+  z-index: 1;
 }
 
 [itk-vtk-tooltip]:hover::before {
-    opacity: 1;
-    transform: translate(0, -50%);
+  opacity: 1;
+  transform: translate(0, -50%);
 }
 
 [itk-vtk-tooltip-bottom]::before {
-    top: calc(100% + 16px);
-    left: 50%;
-    right: initial;
-    transform: translate(-50%, -15px);
+  top: calc(100% + 16px);
+  left: 50%;
+  right: initial;
+  transform: translate(-50%, -15px);
 }
+
 [itk-vtk-tooltip-bottom]:hover::before {
-    transform: translate(-50%, 0)
+  transform: translate(-50%, 0)
 }
+
 [itk-vtk-tooltip-right]::before {
-    top: 50%;
-    left: calc(100% + 16px);
-    right: initial;
-    transform: translate(-15px, -50%);
+  top: 50%;
+  left: calc(100% + 16px);
+  right: initial;
+  transform: translate(-15px, -50%);
 }
+
 [itk-vtk-tooltip-right]:hover::before {
-    transform: translate(0, -50%);
+  transform: translate(0, -50%);
 }
 
 [itk-vtk-tooltip-top-screenshot]::before {
-    top: initial;
-    left: 260%;
-    right: initial;
-    bottom: calc(100% + 8px);
-    transform: translate(-50%, 15px);
+  top: initial;
+  left: 260%;
+  right: initial;
+  bottom: calc(100% + 8px);
+  transform: translate(-50%, 15px);
 }
+
 [itk-vtk-tooltip-top-screenshot]:hover::before {
-    transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
 }
+
 [itk-vtk-tooltip-top-annotation]::before {
-    top: initial;
-    left: 160%;
-    right: initial;
-    bottom: calc(100% + 10px);
-    transform: translate(-50%, 15px);
+  top: initial;
+  left: 160%;
+  right: initial;
+  bottom: calc(100% + 10px);
+  transform: translate(-50%, 15px);
 }
+
 [itk-vtk-tooltip-top-annotation]:hover::before {
-    transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
 }
+
 [itk-vtk-tooltip-top-fullscreen]::before {
-    top: initial;
-    left: 120%;
-    right: initial;
-    bottom: calc(100% + 10px);
-    transform: translate(-50%, 15px);
-    width: 400%;
+  top: initial;
+  left: 120%;
+  right: initial;
+  bottom: calc(100% + 10px);
+  transform: translate(-50%, 15px);
+  width: 400%;
 }
+
 [itk-vtk-tooltip-top-fullscreen]:hover::before {
-    transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
 }
+
 [itk-vtk-tooltip-top]::before {
-    top: initial;
-    left: 60%;
-    right: initial;
-    bottom: calc(100% + 10px);
-    transform: translate(-50%, 15px);
+  top: initial;
+  left: 60%;
+  right: initial;
+  bottom: calc(100% + 10px);
+  transform: translate(-50%, 15px);
 }
+
 [itk-vtk-tooltip-top]:hover::before {
-    transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
 }
+
 [itk-vtk-tooltip-top-fullscreen]::before {
-    top: initial;
-    left: 120%;
-    right: initial;
-    bottom: calc(100% + 10px);
-    transform: translate(-50%, 15px);
-    width: 400%;
+  top: initial;
+  left: 120%;
+  right: initial;
+  bottom: calc(100% + 10px);
+  transform: translate(-50%, 15px);
+  width: 400%;
 }
 
 .tooltipButtonBrightBG::before {
@@ -208,7 +239,7 @@
   padding-top: 2px;
   padding-bottom: 2px;
   padding-left: 6px;
-  padding-right: 6px;
+  padding-right: 0px;
   cursor: pointer;
   z-index: 1000;
 }
@@ -236,10 +267,10 @@
 
 .fullscreenButton {
   flex: 1;
-  width: 8m;
+  width: 8 m;
   padding-top: 2px;
   padding-bottom: 2px;
-  padding-left: 6px;
+  padding-left: 2px;
   padding-right: 6px;
   cursor: pointer;
   z-index: 1000;
@@ -289,7 +320,7 @@
   padding-top: 2px;
   padding-bottom: 2px;
   padding-left: 6px;
-  padding-right: 6px;
+  padding-right: 2px;
   cursor: pointer;
   z-index: 1000;
 }
@@ -302,10 +333,10 @@
 .compareButton {
   flex: 1;
   height: 8mm;
-  padding-top: 4px;
+  padding-top: 2px;
   padding-bottom: 2px;
   padding-left: 6px;
-  padding-right: 6px;
+  padding-right: 15px;
   cursor: pointer;
   z-index: 1000;
 }
@@ -404,6 +435,76 @@
   border-radius: 0.2em;
   opacity: 0.45;
 }
+
+
+/*SelectionWidgetMenu styles*/
+.moveFreeButton {
+  flex: 1;
+  height: 8mm;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 6px;
+  padding-right: 2px;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.moveFreeButton svg {
+  height: 1.2em;
+  width: 1.2em;
+}
+
+.moveDepthButton {
+  flex: 1;
+  height: 8mm;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 6px;
+  padding-right: 2px;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.moveDepthButton svg {
+  height: 1.2em;
+  width: 1.2em;
+}
+
+
+.movePlaneButton {
+  flex: 1;
+  height: 8mm;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 6px;
+  padding-right: 2px;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.movePlaneButton svg {
+  height: 1.2em;
+  width: 1.2em;
+}
+
+.mirrorButton {
+  flex: 1;
+  height: 8mm;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 6px;
+  padding-right: 2px;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.mirrorButton svg {
+  height: 1.2em;
+  width: 1.2em;
+}
+
+
+/*END*/
 
 input:checked.toggleInput + label {
   opacity: 1.0;
